add：关于互动作业抓取.md

--- a/js/express/package.json
+++ b/js/express/package.json
@@ -2,15 +2,32 @@
   "name": "express-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "pm2 start dist/bundle.js",
+    "stop": "pm2 stop dist/bundle.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "create-react-class": "^15.6.3",
+    "express": "^4.16.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "webpack": "^4.3.0",
+    "webpack-cli": "^2.0.13"
   },
-  "dependencies": {}
+  "dependencies": {
+    "hiredis": "^0.5.0",
+    "node-adb": "^0.1.6",
+    "share": "^0.7.40",
+    "sharp": "^0.20.1"
+  }
 }
