--- a/js/express/package.json
+++ b/js/express/package.json
@@ -22,6 +22,7 @@
     "querystring": "^0.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "redis": "^2.8.0",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13"
   },
